ingress-gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http2
      hosts:
        #domínio que hospeda do istio. usando "*" ele permite todos. usar em ambiente local
        - "*"

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-virtual-service
spec:
  hosts:
    # endereço do host declarado no gateway
    - "*"
  gateways:
    - "ingress-gateway-k3s"
  http:
    - match:
        - uri:
            prefix: "/b"
      route:
        - destination:
            host: nginx-service
            subset: v2
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: nginx-service
            subset: v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nginx-destination-rule
spec:
  # nome do service declarado no kubernetes
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: v1
      labels:
        version: A
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
    - name: v2
      labels:
        version: B
